# covid_19_fuzzy_integral_CTSCAN

./: .gitignore  CITATION.cff  CODEBASE_AUDIT.md  CONTRIBUTING.md  FILE_TREE.txt  Makefile  README.md  SECURITY.md  ablation_studies.py  covid-19.ipynb  data_loader.py  evaluate.py  mkdocs.yml  pyproject.toml  requirements.txt  topokd_kaggle_requirements.txt  utils.py  visualize.py
.github/workflows/: ci.yml
artifacts/: exact_duplicates_removed.csv  manifest_summary.json  recovery_manifest_sha256.txt  split_manifest.csv  tda_standardizer_346d6037e0dd86db.npz  tda_standardizer_3b304f87d2a584ba.npz  tda_standardizer_57d28665f3fc1487.npz  tda_standardizer_a4dc8f16a771d173.npz  tda_standardizer_c9c8ba16dc71ac7f.npz
configs/: archive_override_template.yaml.example  base.yaml  baseline_cnn_tda.yaml  topofm_slice_v1.yaml  topolite_fkd_sam.yaml  topolite_kd.yaml  topolite_msf_kd.yaml
configs/ablations/: A2_concat.yaml  (+11 more)
docs/: ablations.md  citation.md  implementation_status.md  index.md  methodology.md  reproducibility.md  results_schema.md  topofm_slice.md
experiments/: README.md
notebooks/: Kaggle_Quickstart.ipynb
research_records/: README.md  historical_results.yaml
scripts/: __init__.py  aggregate_seeds.py  audit_run.py  build_docs.sh  build_tda_cache.py  compare_models.py  evaluate.py  export_paper_tables.py  infer.py  package_run.py  prepare_manifest.py  profile_model.py  run_ablation_suite.py  run_pipeline.py  train.py  train_teacher.py  validate_install.py  visualize.py
tests/: test_config.py  test_metrics.py  test_model_forward.py  test_topology_shapes.py
(+49 files in other folders)
